<resources>
    <string name="app_name">Portofolio App</string>
    <string name="app_title">My Nanodegree App</string>
    <string name="popular_movies_app">popular movies</string>
    <string name="stock_hawk_app">stock hawk</string>
    <string name="build_it_bigger_app">build it bigger</string>
    <string name="make_material_app">make your app material</string>
    <string name="go_ubiquitous_app">go ubiquitous</string>
    <string name="capstone_app">capstone</string>

    <!-- https://developer.android.com/reference/java/util/Formatter.html -->
    <string name="toast_message_title">
        This button will launch my %1$s app!
    </string>
</resources>
