<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.amrta.android.portofolioapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_title"/>

    <Button
        android:id="@+id/popular_movies_app"
        android:layout_width="@dimen/app_chooser_button"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies_app"/>

    <Button
        android:id="@+id/stock_hawk_app"
        android:layout_width="@dimen/app_chooser_button"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk_app"/>

    <Button
        android:id="@+id/build_it_bigger_app"
        android:layout_width="@dimen/app_chooser_button"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app"/>

    <Button
        android:id="@+id/make_material_app"
        android:layout_width="@dimen/app_chooser_button"
        android:layout_height="wrap_content"
        android:text="@string/make_material_app"/>

    <Button
        android:id="@+id/go_ubiquitous_app"
        android:layout_width="@dimen/app_chooser_button"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous_app"/>

    <Button
        android:id="@+id/capstone_app"
        android:layout_width="@dimen/app_chooser_button"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"/>

</LinearLayout>
